--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "aws-sdk": "^2.678.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
