--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "async": "^3.2.0",
     "aws-sdk": "^2.678.0",
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "http-errors": "^1.7.3",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
