--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.0",
     "async": "^3.2.0",
     "aws-sdk": "^2.678.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "http-errors": "^1.7.3",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.3",
     "pug": "^2.0.4"
   }
 }
