--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^3.2.0",
     "aws-sdk": "^2.678.0",
     "cookie-parser": "^1.4.5",
+    "csv-stringify": "^5.5.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
