--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-errors": "^1.7.3",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "neat-csv": "^5.2.0",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.3",
