--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "http-errors": "^1.7.3",
+    "memorystore": "^1.6.2",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "neat-csv": "^5.2.0",
