--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.3",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "standardized-audio-context": "^24.1.22"
   }
 }
