--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formidable": "^1.2.2",
     "http-errors": "^1.7.3",
     "install": "^0.13.0",
+    "jstransformer-babel": "^2.1.0",
     "memorystore": "^1.6.2",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
